chore: use web component props to initialize fetching

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <script src="https://unpkg.com/@junto-foundation/junto-elements@latest"></script>
   </head>
   <body>
-    <chat-view></chat-view>
+    <chat-view
+      neighbourhoodUui="7e8dfe0e-eb4c-4615-a8da-2f150faaef8e"
+      neighbourhoodUrl="neighbourhood://QmckHenTt78Hqb77tCtXxk3ke8PPKwNHBjbx4tEqe9Adyx"
+      languageAddress="QmYkgcLtTixVNJw6CLhiqJQeGwyN7rNWY2fC3pHWZ5Ba5x"
+    ></chat-view>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
