--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
   <body>
     <chat-view
-      neighbourhoodUui="7e8dfe0e-eb4c-4615-a8da-2f150faaef8e"
-      neighbourhoodUrl="neighbourhood://QmckHenTt78Hqb77tCtXxk3ke8PPKwNHBjbx4tEqe9Adyx"
-      languageAddress="QmYkgcLtTixVNJw6CLhiqJQeGwyN7rNWY2fC3pHWZ5Ba5x"
+      neighbourhood-uuid="hack-6cd33748-78f7-4142-a5ce-38034d0a993f"
+      neighbourhood-url="neighbourhood://Qmc2KCm7UtkH9VFgoXR7WzyhL63Fp3qHs8LrCPcoSm9Gre"
+      language-address="QmR8j42288RoEQHecvjEhYtdRPThTUeCevuLqpwgNKCPDi"
     ></chat-view>
     <script type="module" src="/src/main.ts"></script>
   </body>
