wip: get perspective meta and profile info

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   </head>
   <body>
     <chat-view
-      neighbourhood-uuid="hack-6cd33748-78f7-4142-a5ce-38034d0a993f"
-      neighbourhood-url="neighbourhood://Qmc2KCm7UtkH9VFgoXR7WzyhL63Fp3qHs8LrCPcoSm9Gre"
-      language-address="QmR8j42288RoEQHecvjEhYtdRPThTUeCevuLqpwgNKCPDi"
+      perspective-uuid="hack-75101d5d-c8e2-41a4-96bd-931bb887171f"
     ></chat-view>
     <script type="module" src="/src/main.ts"></script>
   </body>
