perf(chat) - Added esbuild post css to add support for css moudle imports

--- a/packages/mini-chat-view/index.html
+++ b/packages/mini-chat-view/index.html
@@ -23,12 +23,16 @@
       rel="stylesheet"
       href="https://unpkg.com/@junto-foundation/junto-elements@latest/dist/main.css"
     />
+    <link
+    rel="stylesheet"
+    href="./dist/main.css"
+  />
     <script src="https://unpkg.com/@junto-foundation/junto-elements@latest"></script>
   </head>
   <body>
     <mini-chat-view
       style="height: 100vh; display: block"
-      perspective-uuid="8e4210ae-a2cd-4b4f-b5e2-1e9bfc1b9901"
+      perspective-uuid="34686887-1d1e-4602-b6b1-3837a2853092"
     ></mini-chat-view>
     <script type="module">
       import MiniChatView from "./dist/main.js";
