--- a/packages/mini-chat-view/index.html
+++ b/packages/mini-chat-view/index.html
@@ -26,14 +26,17 @@
     <script src="https://unpkg.com/@junto-foundation/junto-elements@latest"></script>
   </head>
   <body>
-    <mini-chat-view style="height: 100vh; display: block"></mini-chat-view>
+    <perspective-view style="height: 100vh; display: block"></perspective-view>
     <script type="module">
       const uuid = window.location.href.split("/").pop().replace("#", "");
-      const el = document.querySelector("mini-chat-view");
+      const el = document.querySelector("perspective-view");
       el.setAttribute("perspective-uuid", uuid);
+      el.addEventListener("perspective-click", (e) => {
+        el.setAttribute(e.detail.uuid);
+      });
 
       import MiniChatView from "./dist/main.js";
-      customElements.define("mini-chat-view", MiniChatView);
+      customElements.define("perspective-view", MiniChatView);
     </script>
   </body>
 </html>
